# ifl_mcdc

./: .coverage  .env.example  .gitignore  _gen_report.py  _gen_report2.py  _new_runs.json  _rerun.py  complexity_experiment_report.json  diversity_reporter.py  diversity_results.txt  e2e_result.txt  e2e_result_1.txt  experiment_report.json  experiment_results.json  generate_compliance_report.py  ifl_diversity_cases.json  llm_semantics_report.json  pyproject.toml  run_complexity_experiments.py  run_experiments.py  run_ifl_diversity.py  run_validation.py  run_validation_complex.py  statistical_validator.py  system_snapshot.txt  validate_llm_semantics.py  validation_complex_results.txt  validation_fixtures.py  實驗數據報告.docx  實驗數據報告_v2.docx
docs/: SDD.md  SDD_IFL_MCDC_System.docx  SDD_IFL_MCDC_System.md  SRS.md  SRS_IFL_MCDC_System.docx  SRS_IFL_MCDC_System.md  STD.md  STD_IFL_MCDC_System.docx  STD_IFL_MCDC_System.md  實驗室進度報告_IFL_MCDC.docx  實驗室進度報告_詳細版.docx
ifl_mcdc/: config.py  exceptions.py  orchestrator.py
ifl_mcdc/data/: __init__.py  clinical_profile_loader.py  clinical_profiles.json
ifl_mcdc/layer1/: ast_parser.py  coupling_graph.py  coverage_engine.py  probe_injector.py
ifl_mcdc/layer2/: boolean_derivative.py  bound_extractor.py  gap_analyzer.py  smt_synthesizer.py
ifl_mcdc/layer3/: acceptance_gate.py  domain_validator.py  llm_sampler.py  prompt_builder.py
ifl_mcdc/models/: coverage_matrix.py  decision_node.py  probe_record.py  smt_models.py  validation.py
tests/: conftest.py
tests/fixtures/: complex_medical_logic.py  conftest.py  dose_adjustment.py  (+5 more)
(+19 files in other folders)
