[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ifl-mcdc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "z3-solver==4.13.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "anthropic>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "mypy>=1.8",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
